# amd-tools

./: .gitignore  .gitmodules  CMakeLists.txt  auto_topo.cpp  investigation_report.md  process_one_batch.py
bash_run/: bench.sh  bench_random.sh  config  config.1  config.2  config.4  launch.sh  remote.sh  run.sh
conver_dense_fp8_to_bf16/: fp8_cast_bf16.py
docker_sh/: launch_dsv32.sh  run.sh  run_omini.sh  run_profile.sh  run_sr.sh  wan_fp8.sh
docs/: cdna4_isa_full.txt  disasm_32x128.s
gemm/: gen.py  run.sh  torch_gemm.py  torch_gemm_multi.py  torch_gemm_single.py
nic/: .gitignore  lat_breakdown.py  mori_io_bench.sh  mori_io_bidir.py  mori_io_bidir_test.sh  mori_p2p_bench.py  mori_profile.sh  nic_monitor.py  p2p_bw.py  p2p_profile.sh  perftest.sh  qwen3.nic  qwen3_mini.nic  rdma_monitor.py  readme.md  start.sh  test1  xgmi_monitor.py  xgmi_test.sh
rdma_monitor/: CMakeLists.txt  monitor.cpp  monitor_rx.cpp  postprocess.py  visualize.py
results/: best_M128_N4096_K7168.json  best_M128_N7168_K2048.json  best_M16_N4096_K7168.json  best_M16_N7168_K2048.json  best_M1_N4096_K7168.json  best_M1_N7168_K2048.json  best_M2_N4096_K7168.json  best_M2_N7168_K2048.json  best_M32_N4096_K7168.json  best_M32_N7168_K2048.json  best_M4_N4096_K7168.json  best_M4_N7168_K2048.json  best_M64_N4096_K7168.json  best_M64_N7168_K2048.json  best_M8_N4096_K7168.json  best_M8_N7168_K2048.json  ck_sweep_M1_N4096_K7168.json  log_M128_N4096_K7168.txt  log_M128_N7168_K2048.txt  log_M16_N4096_K7168.txt  log_M16_N7168_K2048.txt  log_M1_N4096_K7168.txt  log_M1_N7168_K2048.txt  log_M2_N4096_K7168.txt  log_M2_N7168_K2048.txt  log_M32_N4096_K7168.txt  log_M32_N7168_K2048.txt  log_M4_N4096_K7168.txt  log_M4_N7168_K2048.txt  log_M64_N4096_K7168.txt  (+3 more)
(+124 files in other folders)
